<resources>
    <string name="app_name">핑퐁</string>

    <!-- ///////////////////////////////// -->
    <!-- 회원가입 -->
    <string name="join_title">회원가입</string>
    <string name="nickName">닉네임</string>
    <string name="login_hint">한글/영문 조합 10자 이내</string>
    <string name="more_detail">자세히 보기</string>
    <string name="term_personal_information">개인정보 처리방침</string>
    <string name="url_term_personal_information">https://h2bal.notion.site/348d88feb1c4473d989fdba43c0023e3</string>
    <string name="term_service">이용약관</string>
    <string name="url_term_service">https://h2bal.notion.site/e31711309bae467cac6874f2108eecd6</string>
    <string name="btn_done">완료</string>

    <!-- ///////////////////////////////// -->
    <!-- 메인 홈 -->
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <!-- ///////////////////////////////// -->
    <!-- 검색 -->
    <string name="search_nickNm">닉네임 검색</string>
    <string name="recent_search">최근 검색</string>
    <string name="delete_all">전체삭제</string>
    <string name="no_recent_search">검색한 기록이 없습니다.</string>
    <string name="no_friend_list">검색 결과가 없습니다.</string>

    <!-- ///////////////////////////////// -->
    <!-- 알림 -->
    <string name="alarm">알림</string>
    <string name="accept">수락</string>
    <string name="reject">거절</string>
    <string name="no_notice_list">알림이 없어요 :D</string>

    <!-- ///////////////////////////////// -->
    <!-- 팀 -->
    <string name="edit_group_order">그룹 순서 편집</string>
    <string name="attending_group">참여 중인 그룹</string>
    <string name="group_member">그룹 멤버</string>
    <string name="group_name">그룹 만들기</string>
    <string name="group_name_hint">10자 이내</string>
    <string name="member">멤버</string>
    <string name="invite_member">멤버 초대</string>
    <string name="search_nick">닉네임 검색</string>
    <string name="todo_hint">최대 18자까지 입력</string>

    <string name="wait">대기중</string>
    <string name="invite_refuse">초대 거절</string>
    <string name="invite_complete">신청 완료</string>

    <string name="trash">휴지통</string>
    <string name="empty">비우기</string>
    <string name="no_trash">버린 할 일이 아직 없네요.</string>
    <string name="empty_trash">휴지통을 완전히 비우시겠습니까?</string>

    <string name="delete_to_trash">버리기</string>
    <string name="confirm_delete_to_trash">할 일 %1$s를 버리시겠습니까?</string>
    <string name="done_delete_to_trash">할 일을 휴지통에 버렸어요.</string>

    <string name="edit_team">그룹 관리</string>
    <string name="delete_team">그룹 삭제하기</string>
    <string name="stop_edit_team">변경된 사항이 반영되지 않습니다. \n그래도 나가시겠습니까?</string>
    <string name="delete_team_dialog">그룹 삭제시 복구가 어렵습니다. \n삭제하시겠습니까?</string>

    <string name="pass">넘기기</string>
    <string name="change_member">%1$s 님께 방장을 넘기시겠습니까?</string>
    <string name="emit_member">%1$s 님을 내보내시겠습니까?</string>
    <string name="resign_team">그룹을 나가시겠습니까?</string>

    <!-- ///////////////////////////////// -->
    <!-- 마이페이지 & 설정 -->
    <string name="edit_profile">프로필 편집</string>
    <string name="friend">친구</string>
    <string name="n">N</string>

    <string name="setting">설정</string>
    <string name="photo">사진</string>

    <string name="more">더보기</string>
    <string name="add_todo">할 일 추가</string>
    <string name="add_friend">친구 신청</string>

    <string name="friend_num">친구 %1$s명</string>
    <string name="profile_edit">프로필 편집</string>
    <string name="collecting_popcorn">팝콘 수집</string>
    <string name="my_todo_group">참여 중인 그룹</string>
    <string name="make_group">그룹 만들기</string>
    <string name="no_popcorn">모은 팝콘이 아직 없네요</string>
    <string name="no_group">그룹이 아직 없네요</string>
    <string name="no_image">사진이 없어요ㅜ_ㅜ</string>

    <string name="account">계정</string>
    <string name="alarm_setting">알림 설정</string>
    <string name="announcement">공지사항</string>
    <string name="info">정보</string>
    <string name="logout">로그아웃</string>

    <string name="social_login">소셜로그인</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="push_alarm">푸시 알림</string>
    <string name="term_open_source">오픈소스 라이브러리</string>
    <string name="app_version_info">앱버전</string>

    <!-- ///////////////////////////////// -->
    <!-- 레이아웃 -->
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="out">나가기</string>
    <string name="delete_word">삭제</string>
    <string name="date">날짜</string>
    <string name="manager">담당자</string>
    <string name="get_rid_of">내보내기</string>
    <string name="restore">복구하기</string>
    <string name="delete">삭제하기</string>


</resources>