<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pingpong_android.view.setting.information.InformationViewModel" />
        <variable
            name="activity"
            type="com.pingpong_android.view.setting.information.InformationActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:onClickListener="@{v -> activity.onBackPressed()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/info"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/topPanel">
            <TextView
                android:id="@+id/term_user_info"
                style="@style/textBlackBold16"
                android:text="@string/term_personal_information"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/term_service_info"
                style="@style/textBlackBold16"
                android:text="@string/term_service"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="8dp"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/term_open_source"
                style="@style/textBlackBold16"
                android:text="@string/term_open_source"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="8dp"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="32dp"
                android:paddingVertical="8dp"
                android:paddingEnd="24dp"
                android:gravity="center"
                android:layout_marginBottom="16dp">
                <TextView
                    style="@style/textBlackBold16"
                    android:text="@string/app_version_info" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/app_version"
                    style="@style/textBlackBold16"
                    tools:text="1.0.0" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>