<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pingpong_android.view.makeTeam.MakeTeamViewModel" />
        <variable
            name="activity"
            type="com.pingpong_android.view.makeTeam.MakeTeamActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        android:background="@color/white">

        <com.pingpong_android.layout.TopPanel
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:topPanelClose="true"
            app:topPanelTitle="@string/make_group"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/topPanel">

            <TextView
                android:id="@+id/nick_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/group_nameET_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="18dp"
                app:boxCornerRadiusBottomStart="18dp"
                app:boxCornerRadiusTopEnd="18dp"
                app:boxCornerRadiusTopStart="18dp"
                app:boxStrokeColor="@color/main_yellow"
                app:hintEnabled="false"
                app:boxStrokeWidthFocused="1dp"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/group_nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/group_name_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_mem_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/member"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invite_member"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingVertical="16dp"
                android:layout_marginTop="8dp"
                android:onClickListener="@{v -> activity.goToFriendList()}"
                android:background="@drawable/back_white_stroke_gray_18dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/member_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:itemCount="3"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/add_mem_layout"
            app:layout_constraintBottom_toTopOf="@+id/btn_done"/>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_done"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@{viewModel.isReady ? @drawable/back_yellow_18dp : @drawable/back_gray_18dp}"
            android:clickable="@{viewModel.isReady ? true : false}"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:layout_marginBottom="14dp"
            android:onClickListener="@{v -> activity.makeGroup()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>