<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pingpong_android.view.gallery.GalleryViewModel" />
        <variable
            name="activity"
            type="com.pingpong_android.view.gallery.GalleryActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.pingpong_android.layout.TopPanel
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:topPanelClose="true"
            app:topPanelTitle="@string/photo"
            android:paddingHorizontal="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/photo_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_photo"
            tools:itemCount="1"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/topPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/no_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_image"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/topPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_done"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@{viewModel.isReady ? @drawable/back_yellow_18dp : @drawable/back_gray_18dp}"
            android:clickable="@{viewModel.isReady ? true : false}"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>