<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pingpong_android.view.myPage.MyPageViewModel" />
        <variable
            name="activity"
            type="com.pingpong_android.view.myPage.MyPageActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:onClickListener="@{v -> activity.onBackPressed()}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/userNm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="밍쯔밍쯔"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_setting"/>

            <ImageView
                android:id="@+id/btn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:background="@drawable/back_gray_circle_with_gray_outline"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/topPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/default_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:padding="5dp"
            android:src="@drawable/ic_profile_popcorn"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/topPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btn_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/friend_num"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            android:onClickListener="@{v -> activity.goToFriend()}"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            android:background="@drawable/back_yellow_30dp"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:onClickListener="@{v -> activity.goToEditProfile()}"
            app:layout_constraintTop_toBottomOf="@+id/btn_friend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/popcorn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collecting_popcorn"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_profile"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/popcorn_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_popcorn"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/popcorn_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/todo_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_todo_group"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/popcorn_list"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            tools:itemCount="2"
            tools:listitem="@layout/item_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_group_title"/>

        <LinearLayout
            android:id="@+id/no_team_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todo_group_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_group"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_add_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/make_group"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="48dp"
                android:onClickListener="@{v -> activity.goToMakeTeam()}"
                android:background="@drawable/back_white_stroke_gray_26dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>